objects/sfiEnergyCAMProductImages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It will store the Product Code and Image&apos;s developer name. It will be used to map image to the particular product. The Image is stored as a Document record, Use Developer Name same as image name for all the images.</description>
    <fields>
        <fullName>IsDefaultImage__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On attachment record it will set the image as default image.</description>
        <label>IsDefaultImage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Store the product code of the product for which you need to add the image as an attachment.</description>
        <label>Product_Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <description>I will store the Developer name of the image present in Document object.</description>
        <label>Product_Image</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isImageUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked then it means the image has been attached to the product.</description>
        <label>isImageUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>sfiEnergyCAMProductImages</label>
</CustomObject>